--- a/qqdancer/webpages/index.html
+++ b/qqdancer/webpages/index.html
@@ -4,14 +4,22 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title>人员大比拼</title>
+		<title>人缘大比拼</title>
 		<link rel="stylesheet" type="text/css" href="../css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
 	</head>	
 	<body>	
+			<div id="popup-color"></div>
 			<div class="public-bg">
-				<div class="container">			
-					<div class="public-header"></div>
+				<div class="public-header"></div>
+				<div class="container">		
+					<div id="popup-box" class="popup-box">
+						<div class="popup">
+							<p class="popup-text1">您是好人缘玩家</p>		
+							<p class="popup-text2">可以邀请好友回归领取奖励!</p>
+						</div>
+						<a id="close" class="close" href=""></a>
+					</div>
 					<div class="public-main">
 						<a class="public-head-logo" href="#"><img src="../images/index-head-logo.png" alt="logo"/></a>
 						<div class="public-head-title">
@@ -22,26 +30,99 @@
 							</p>
 							<div class="head-title-logo"><img src="../images/head-title-logo.png" 								alt="text-logo"/> </div>	
 						<div class="head-title-time">
-							<span class="title-time-text">活动时间：2014年1月16日—2014年2月8日</span>
+							<div class="title-time-text">活动时间：2014年1月16日—2014年2月8日</div>
 						</div>
 						<div class="btn">
-							<a class="btn1" href="#"><span class="btn-text">检测自己的属性</span></a>
+							<a id="btn1" class="btn1" href="#"><span class="btn-text">检测自己的属性</span></a>
 							<a class="btn2" href="#"><span class="btn-text">上手机拿点卷</span></a>
 						</div>
 						<p class="login">您好！您还未登录，请先<a href="#">【登录】</a>!</p>
 						</div>			
 						<div class="box">
 							<div class="box-head">
-								<a class="box-head-left" href="#"><span class="box-head-num">01</span> 我是好人缘玩家</a>
-								<a class="box-head-right" href="#"><span class="box-head-num">02</span> 我是回归小伙伴</a>
+								<a id="box-head-left" class="box-head-left btn-change" href="#"><span class="box-head-num">01</span> 我是好人缘玩家</a>
+								<a id="box-head-right" class="box-head-right" href="#"><span class="box-head-num">02</span> 我是回归小伙伴</a>
 							</div>
-							<div class="box-main"></div>
+							<div id="main1" class="box-main clearfix">
+								<div class="box-main-left"></div>
+								<div class="box-main-right">
+									<h3 class="box-main-title">邀请好友回归</h3>
+									<p class="join">如何参与>></p>
+									<div class="partake"></div>
+									<p class="tipsp">
+										<span class="iconarrow"></span>
+										随机邀请的好友在页面上同自己进行绑定即算邀请成功哦!
+									</p>
+									<a class="invitebtn" href="#"></a>
+									<p class="tipsp">
+										<span class="iconarrow"></span>
+										活动期间内累计成功召回好友达1、5、10 <b>还可获得专属奖励</b>！
+									</p>
+									<b class="freshbg">
+										当前已成功邀请 <a id="freshID">XXXX</a> 名好友
+										<a class="freshbtn" href=""></a>
+									</b>
+									<ul class="main-list">
+										<li class="list-content">
+											<img src="../images/box-pic1.png" alt="成功邀请1名" style="width: 187;height: 137px;" />
+											<a class="list-btn" href=""></a>
+										</li>
+										<li class="list-content">
+											<img src="../images/box-pic2.png" alt="成功邀请1名" style="width: 187;height: 137px;" />
+											<a class="list-btn" href=""></a>
+										</li>
+										<li class="list-content">
+											<img src="../images/box-pic3.png" alt="成功邀请1名" style="width: 187;height: 137px;" />
+											<a class="list-btn" href=""></a>
+										</li>										
+									</ul>
+								</div>								
+							</div>
+							<div id="main2" class="box-main2 clearfix">
+								<div class="box-main2-left"></div>
+								<div class="box-main-right">
+									<h3 class="box-main-title">响应好友召回</h3>
+									<p class="join">如何参与>></p>
+									<div class="partake2"></div>
+									<div class="main2-right-left">
+										<img src="../images/box2-pic.png" alt="全新冒险岛系统上线" style="width: 268px;height: 405px;"/>
+										<a class="selectbtn" href=""></a>
+									</div>
+									<div class="main2-right-right">
+										<a class="invitebtn2" href="#"></a>
+										<p class="tipsp2">
+											<span class="iconarrow2"></span>
+											成功同邀请自己回归的好友绑定后，即可100%在页面获得 <b>500点券回归奖励</b>!
+										</p>
+										<div class="dianj">
+											<div class="dianj-left"></div>
+											<a class="dianj-right" href=""></a>
+										</div>
+										<p class="tipsp3">
+											<span class="iconarrow2"></span>
+											前往回归专区领取回归大奖，5000点券+飞天羽翼+风情十色/魔法少年陪你过新年！
+										</p>
+										<div class="box2">
+											<div class="box2-pic1"></div>
+											<div class="box2-pic2"></div>
+											<div class="box2-pic3"></div>	
+										</div>
+										<a class="gobtn" href=""></a>
+									</div>
+								</div>
+							</div>
 						</div>	
+					</div>			
+				</div>
+				<div class="public-footer">
+					<div class="container">
+						<p class="public-footer-text">关于腾讯 | About Tencent | 服务条款 | 广告服务 | 腾讯招聘 | 商务洽谈 | 网站导航 | 腾讯客服</p>
+						<p class="public-footer-text">Copyright©1999-2011 Tencent. All Rights Reserved.</p>
+						<p class="public-footer-text">腾讯公司 版权所有</p>
 					</div>
-					<div class="public-footer"></div>
 				</div>
 			</div>
-			<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+			<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 			<script type="text/javascript" src="../js/index.js" ></script>
 	</body>
 </html>
