--- a/qqdancer/webpages/index.html
+++ b/qqdancer/webpages/index.html
@@ -18,30 +18,27 @@
 							<p class="popup-text1">您是好人缘玩家</p>		
 							<p class="popup-text2">可以邀请好友回归领取奖励!</p>
 						</div>
-						<a id="close" class="close" href=""></a>
+						<input type="button" id="closebtn" class="close"></input>
 					</div>
 					<div class="public-main">
 						<a class="public-head-logo" href="#"><img src="../images/index-head-logo.png" alt="logo"/></a>
 						<div class="public-head-title">
-							<p class="head-title-text">
-								<i class="line"></i>
-									<span class="txt">疯狂的小伙伴去哪了</span>
-								<i class="line"></i>
-							</p>
-							<div class="head-title-logo"><img src="../images/head-title-logo.png" 								alt="text-logo"/> </div>	
-						<div class="head-title-time">
-							<div class="title-time-text">活动时间：2014年1月16日—2014年2月8日</div>
-						</div>
-						<div class="btn">
-							<a id="btn1" class="btn1" href="#"><span class="btn-text">检测自己的属性</span></a>
-							<a class="btn2" href="#"><span class="btn-text">上手机拿点卷</span></a>
-						</div>
-						<p class="login">您好！您还未登录，请先<a href="#">【登录】</a>!</p>
+							<div class="head-title-logo">
+								<img src="../images/head-title-logo.png" alt="text-logo"/> 
+							</div>	
+							<div class="head-title-time">
+								<div class="title-time-text">活动时间：2014年1月16日—2014年2月8日</div>
+									</div>
+							<div class="btn">
+								<a class="btn2" href="#"><span class="btn-text">上手机拿点卷</span></a>
+								<a id="btn1" class="btn1" href="#"><span class="btn-text">检测自己的属性</span></a>	
+							</div>
+							<p class="login">您好！您还未登录，请先<a href="#">【登录】</a>!</p>
 						</div>			
 						<div class="box">
 							<div class="box-head">
-								<a id="box-head-left" class="box-head-left btn-change" href="#"><span class="box-head-num">01</span> 我是好人缘玩家</a>
-								<a id="box-head-right" class="box-head-right" href="#"><span class="box-head-num">02</span> 我是回归小伙伴</a>
+								<a id="box-head-left" class="box-head-left btn-change1" href="#"></a>
+								<a id="box-head-right" class="box-head-right" href="#"></a>
 							</div>
 							<div id="main1" class="box-main clearfix">
 								<div class="box-main-left"></div>
@@ -95,18 +92,19 @@
 											成功同邀请自己回归的好友绑定后，即可100%在页面获得 <b>500点券回归奖励</b>!
 										</p>
 										<div class="dianj">
-											<div class="dianj-left"></div>
 											<a class="dianj-right" href=""></a>
+											<div class="dianj-left"></div>
+											
 										</div>
 										<p class="tipsp3">
 											<span class="iconarrow2"></span>
 											前往回归专区领取回归大奖，5000点券+飞天羽翼+风情十色/魔法少年陪你过新年！
 										</p>
-										<div class="box2">
-											<div class="box2-pic1"></div>
-											<div class="box2-pic2"></div>
-											<div class="box2-pic3"></div>	
-										</div>
+										<ul class="box2">
+											<li class="box2-pic1"></li>
+											<li class="box2-pic2"></li>
+											<li class="box2-pic3"></li>	
+										</ul>
 										<a class="gobtn" href=""></a>
 									</div>
 								</div>
