--- a/qqdancer/webpages/index.html
+++ b/qqdancer/webpages/index.html
@@ -120,7 +120,7 @@
 					</div>
 				</div>
 			</div>
-			<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+			<script type="text/javascript" src="../js/jquery-1.9.1.min.js"></script>
 			<script type="text/javascript" src="../js/index.js" ></script>
 	</body>
 </html>
